# hire-david-parker

./: .gitignore  Cargo.toml  LICENSE  PROJECT.md  README.md  UPDATERULES.md  UPDATE_RULES.md  cov.sh
.github/workflows/: test.yml
coverage/: tarpaulin-report.html
docs/: UPDATE_RULES.md
scripts/: coverage.sh
src/: lib.rs  main.rs
src/static/: about.txt
src/static/content/: about.md  contact.md  projects.json  projects.md  skills.json  skills.md  timeline.json  timeline.md  welcome.md  why_warp.md
src/tui/: app.rs  event.rs  handlers.rs  markdown.rs  mod.rs  models.rs  runner.rs  state.rs  ui.rs
tests/: cli_tests.rs  event_tests.rs  handlers_tests.rs  markdown_tests.rs  runner_tests.rs  state_tests.rs  ui_tests.rs
tests/common/: mod.rs
