[package]
name = "hiredavidparker"
version = "0.1.0"
edition = "2021"
description = "Interactive resume/application CLI for Warp"
authors = ["David Parker"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
pulldown-cmark = "0.9.3"
open = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
