[package]
name = "hire-david-parker"
version = "0.3.0"
edition = "2021"
description = "Interactive terminal-based resume application with a TUI interface"
authors = ["David Parker"]
license = "MIT"
repository = "https://github.com/davidparkercodes/hire-david-parker"
homepage = "https://github.com/davidparkercodes/hire-david-parker"
documentation = "https://docs.rs/hire-david-parker"
keywords = ["resume", "tui", "terminal", "interactive", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "hire_david_parker"
path = "src/lib.rs"

[[bin]]
name = "hire-david-parker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.commands]
cov = "./scripts/coverage.sh"